# conda-inject

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: release-please.yml  test.yml
conda_inject/: __init__.py
tests/: test-env-pip.yaml  test-env.yaml  tests.py
